Add delete task with `followSymlinks` set to `true`

--- a/build.gradle
+++ b/build.gradle
@@ -24,3 +24,8 @@ task deleteDirectory(type: Delete) {
 task deleteSymlink(type: Delete) {
     delete file('sample-symlink')
 }
+
+task deleteSymlinkWithFollowSymlinksTrue(type: Delete) {
+    followSymlinks(true)
+    delete file('sample-symlink')
+}
